# wasm-zip

./: .gitignore  .gitlab-ci.yml  BACKGROUND.md  Cargo.toml  DEVELOPING.md  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
ci/: include_js_snippets_in_package.js
js/: create_directory_mapping.js  flatten_input.js  get_system_time.js
src/: DoggyBag.ts  blob.rs  crc.rs  crc_calculator.rs  date_time_converter.rs  date_time_retriever.rs  directory_hash_map_generator.rs  file_entry.rs  lib.rs  zip_file.rs
src/crc/: ICRC32Calculator.ts  bitwise_crc_calculator.rs
src/crc_calculator/: crc_calculator_adapter.rs
src/date_time_converter/: dos_date_time_calculator_adapter.rs
src/date_time_retriever/: chrono_system_time_retriever.rs  dos_date_time_retriever.rs  dos_date_time_retriever_adapter.rs  fake_time_retriever.rs
src/file_entry/: zip_file_entry.rs
src/zip_file/: zip_blob_factory.rs  zip_file_entry.rs
test/: DoggyBag.Spec.ts
tests/: web.rs
