[package]
name = "doggy-bag"
version = "0.1.0"
authors = ["Shaylin Chetty <shaylin.chetty@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.com/Shaylin/doggy-bag"
description = "A library that allows you to generate a zip archive in memory. No file system needed."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
crc = "2.1.0"
chrono = "0.4.19"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
