[package]
name = "wasm-zip"
version = "0.1.0"
authors = ["Shaylin Chetty <shaylin.chetty@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.com/Shaylin/wasm-zip"
description = "A library that allows you to generate a zip archive in memory. No file system needed."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
crc = "2.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
opt-level = "s"
